[EFL][DRT] LayoutTestController does not implement clearApplicationCacheForOrigin https://bugs.webkit.org/show_bug.cgi?id=86195

Patch by Jussi Kukkonen <jussi.kukkonen@intel.com> on 2012-05-31
Reviewed by Gustavo Noronha Silva.

Source/WebKit/efl:

add new function to clear security origin application cache,
and a function to create a security origin from url string.
Reindent the header to match new longer return signature.

* ewk/ewk_security_origin.cpp:
(ewk_security_origin_application_cache_clear):
(ewk_security_origin_new_from_string):
* ewk/ewk_security_origin.h:

Tools:

Implement clearApplicationCacheForOrigin in EFL
LayoutTestController.

* DumpRenderTree/efl/LayoutTestControllerEfl.cpp:
(LayoutTestController::clearApplicationCacheForOrigin):

LayoutTests:

Unskip http/tests/appcache/origin-delete.html now that
EFL TestLayoutController has required functionality.

* platform/efl/Skipped:

Canonical link: https://commits.webkit.org/105813@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119115 268f45cc-cd09-0410-ab3c-d52691b4dbfc