Source/WebKit/efl/ewk/ewk_security_origin.h
@@ -51,7 +51,7 @@ typedef struct _Ewk_Security_Origin Ewk_Security_Origin;
  *
  * @return the protocol scheme
  */
-EAPI const char  *ewk_security_origin_protocol_get(Ewk_Security_Origin *o);
+EAPI const char          *ewk_security_origin_protocol_get(Ewk_Security_Origin *o);
 
 /**
  * Returns the host of the security origin.
@@ -63,7 +63,7 @@ EAPI const char  *ewk_security_origin_protocol_get(Ewk_Security_Origin *o);
  *
  * @return the host domain
  */
-EAPI const char  *ewk_security_origin_host_get(Ewk_Security_Origin *o);
+EAPI const char          *ewk_security_origin_host_get(Ewk_Security_Origin *o);
 
 /**
  * Returns the port of the security origin.
@@ -72,7 +72,7 @@ EAPI const char  *ewk_security_origin_host_get(Ewk_Security_Origin *o);
  *
  * @return the port
  */
-EAPI uint32_t     ewk_security_origin_port_get(const Ewk_Security_Origin *o);
+EAPI uint32_t             ewk_security_origin_port_get(const Ewk_Security_Origin *o);
 
 /**
  * Retrieves the usage of a database for a security origin.
@@ -84,7 +84,7 @@ EAPI uint32_t     ewk_security_origin_port_get(const Ewk_Security_Origin *o);
  *
  * @return the usage in bytes
  */
-EAPI uint64_t     ewk_security_origin_web_database_usage_get(const Ewk_Security_Origin *o);
+EAPI uint64_t             ewk_security_origin_web_database_usage_get(const Ewk_Security_Origin *o);
 
 /**
  * Retrieves the quota of a database for a security origin.
@@ -96,7 +96,7 @@ EAPI uint64_t     ewk_security_origin_web_database_usage_get(const Ewk_Security_
  *
  * @return the quota in bytes
  */
-EAPI uint64_t     ewk_security_origin_web_database_quota_get(const Ewk_Security_Origin *o);
+EAPI uint64_t             ewk_security_origin_web_database_quota_get(const Ewk_Security_Origin *o);
 
 /**
  * Sets the database usage quota for a security origin.
@@ -107,7 +107,7 @@ EAPI uint64_t     ewk_security_origin_web_database_quota_get(const Ewk_Security_
  * @param o security origin object
  * @param quota the usage quota in bytes
  */
-EAPI void         ewk_security_origin_web_database_quota_set(const Ewk_Security_Origin *o, uint64_t quota);
+EAPI void                 ewk_security_origin_web_database_quota_set(const Ewk_Security_Origin *o, uint64_t quota);
 
 /**
  * Sets the application cache usage quota for a security origin.
@@ -115,7 +115,14 @@ EAPI void         ewk_security_origin_web_database_quota_set(const Ewk_Security_
  * @param o security origin object
  * @param quota the usage quota in bytes
  */
-EAPI void         ewk_security_origin_application_cache_quota_set(const Ewk_Security_Origin *o, int64_t quota);
+EAPI void                 ewk_security_origin_application_cache_quota_set(const Ewk_Security_Origin *o, int64_t quota);
+
+/**
+ * Clears the application cache for a security origin.
+ *
+ * @param o security origin object.
+ */
+EAPI void                 ewk_security_origin_application_cache_clear(const Ewk_Security_Origin *o);
 
 /**
  * Return the list of web databases in the security origin.
@@ -133,14 +140,24 @@ EAPI void         ewk_security_origin_application_cache_quota_set(const Ewk_Secu
  * @see ewk_web_database_free()
  * @see ewk_web_database_list_free()
  */
-EAPI Eina_List   *ewk_security_origin_web_database_get_all(const Ewk_Security_Origin *o);
+EAPI Eina_List           *ewk_security_origin_web_database_get_all(const Ewk_Security_Origin *o);
 
 /**
  * Release all resources allocated by a security origin object.
  *
  * @param o security origin object
  */
-EAPI void         ewk_security_origin_free(Ewk_Security_Origin *o);
+EAPI void                 ewk_security_origin_free(Ewk_Security_Origin *o);
+
+/**
+ * Creates a security origin for a url.
+ *
+ * @param url the url for the security origin.
+ *
+ * @return the security origin object
+ */
+EAPI Ewk_Security_Origin *ewk_security_origin_new_from_string(const char *url);
+
 
 #ifdef __cplusplus
 }
